crates/nuzo-class-macros/tests/ui/getter_no_self.stderr
error: #[get] method must take `&self` as the first argument
 --> tests/ui/getter_no_self.rs:6:5
  |
6 |     #[get]
  |     ^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
